--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+slint = "1.14"
+material-color-utilities = "1.0.0-dev.18"
+
+[build-dependencies]
+slint-build = "1.14"
