Log state machine transitions

--- a/crates/choreo_state_machine/Cargo.toml
+++ b/crates/choreo_state_machine/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+env_logger = "0.11"
+log = "0.4"
 nject = "0.4"
-thiserror = "1"
+thiserror = "2.0.18"
