--- a/apps/android/Cargo.toml
+++ b/apps/android/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-slint = { version = "1.14", features = ["backend-android-activity-06"] }
-shared = { path = "../../crates/shared", package = "rchoreo_shared" }
+slint = { version = "1.14.1", features = ["backend-android-activity-06"] }
+choreo_algorithms = { path = "../../crates/choreo_algorithms", package = "choreo_algorithms" }
+choreo_i18n = { path = "../../crates/choreo_i18n", package = "choreo_i18n" }
+choreo_master_mobile_json = { path = "../../crates/choreo_master_mobile_json", package = "choreo_master_mobile_json" }
+choreo_models = { path="../../crates/choreo_models", package = "choreo_models" }
+choreo_state_machine = { path="../../crates/choreo_state_machine", package = "choreo_state_machine" }
+choreo_components = { path="../../crates/choreo_components", package = "choreo_components" }
