--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4"
 rodio = "0.21.1"
 slint = "1.14.1"
 material-color-utilities = "1.0.0-dev.18"
+nject = "0.4.5"
 
 [build-dependencies]
 slint-build = "1.14.1"
