--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -2,6 +2,7 @@
 name = "choreo_components"
 version = "0.1.0"
 edition = "2024"
+publish = false
 
 [dependencies]
 choreo_models = { path = "../choreo_models" }
@@ -9,9 +10,7 @@ choreo_master_mobile_json = { path = "../choreo_master_mobile_json" }
 choreo_i18n = { path = "../choreo_i18n" }
 choreo_state_machine = { path = "../choreo_state_machine" }
 crossbeam-channel = "0.5"
-env_logger = "0.11"
 log = "0.4"
-rodio = "0.21.1"
 slint = "1.14.1"
 material-color-utilities = "1.0.0-dev.18"
 nject = "0.4.5"
