--- a/crates/choreo_i18n/Cargo.toml
+++ b/crates/choreo_i18n/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
 name = "choreo_i18n"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 publish = false
 
 [dependencies]
 once_cell = "1"
 toml = "0.9.8"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+sys-locale = "0.3.2"
+slint = "1.14.1"
+
+[build-dependencies]
+slint-build = "1.14.1"
