--- a/crates/choreo_master_mobile_json/Cargo.toml
+++ b/crates/choreo_master_mobile_json/Cargo.toml
@@ -2,6 +2,7 @@
 name = "choreo_master_mobile_json"
 version = "0.1.0"
 edition = "2024"
+publish = false
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
