--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -16,6 +16,11 @@ material-color-utilities = "1.0.0-dev.18"
 nject = "0.4.5"
 time = "0.3.46"
 rxrust = "0.15.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+dirs = "5.0.1"
 
 [build-dependencies]
 slint-build = "1.14.1"
