--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -26,6 +26,13 @@ dirs = "5.0.1"
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = ["Storage", "Window"] }
 
+[target.'cfg(target_os = "android")'.dependencies]
+jni = "0.21"
+ndk-context = "0.1"
+
+[target.'cfg(target_os = "ios")'.dependencies]
+objc = "0.2"
+
 [build-dependencies]
 slint-build = "1.14.1"
 
