--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -15,6 +15,7 @@ slint = "1.14.1"
 material-color-utilities = "1.0.0-dev.18"
 nject = "0.4.5"
 time = "0.3.46"
+web-time = "1.1.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
