--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -20,7 +20,7 @@ jobs:
           - os: ubuntu-24.04
             arch: x64
             target: x86_64-unknown-linux-gnu
-          - os: ubuntu-24.04-arm64
+          - os: ubuntu-24.04-arm
             arch: arm64
             target: aarch64-unknown-linux-gnu
     steps:
