--- a/apps/wasm/Cargo.toml
+++ b/apps/wasm/Cargo.toml
@@ -21,4 +21,4 @@ choreo_components = { path="../../crates/choreo_components", package = "choreo_c
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["Document", "Event", "EventTarget", "File", "FileList", "FileReader", "HtmlInputElement", "ProgressEvent", "Window"] }
+web-sys = { version = "0.3", features = ["Document", "Event", "EventTarget", "File", "FileList", "FileReader", "HtmlInputElement", "ProgressEvent", "Url", "Window"] }
