--- a/apps/desktop/Cargo.toml
+++ b/apps/desktop/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 slint = "1.14.1"
+i-slint-backend-winit = "1.14.1"
 crossbeam-channel = "0.5.15"
 rfd = "0.17.2"
 choreo_algorithms = { path = "../../crates/choreo_algorithms", package = "choreo_algorithms" }
