fixing compilation of tests

--- a/.cargo/Config.toml
+++ b/.cargo/Config.toml
@@ -1,14 +1,5 @@
 [ui]
 stack_size_bytes = 8388608
 
-#[target.x86_64-pc-windows-msvc]
-#rustflags = [
-#    "-C",
-#    "link-arg=/STACK:8388608"
-#]
-
-#[target.aarch64-pc-windows-msvc]
-#rustflags = [
-#    "-C",
-#    "link-arg=/STACK:8388608"
-#]
+[target.aarch64-pc-windows-msvc]
+linker = "link.exe"
