--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -24,7 +24,7 @@ dirs = "6.0.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["Storage", "Window"] }
+web-sys = { version = "0.3", features = ["Performance", "Storage", "Window"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
 jni = "0.21"
