--- a/crates/choreo_master_mobile_json/Cargo.toml
+++ b/crates/choreo_master_mobile_json/Cargo.toml
@@ -9,3 +9,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "2.0.18"
 time = { version = "0.3", features = ["formatting", "parsing", "serde" ] }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["Window", "Performance"] }
