--- a/crates/choreo_models/Cargo.toml
+++ b/crates/choreo_models/Cargo.toml
@@ -10,4 +10,5 @@ crossbeam-channel = "0.5"
 time = { version = "0.3.46", features = ["formatting", "parsing"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3"
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["Window", "Performance"] }
