--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -21,10 +21,12 @@ serde_json = "1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 dirs = "6.0.0"
+rodio = "0.17.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = ["Performance", "Storage", "Window"] }
+web-audio-api = "1.2.0"
 
 [target.'cfg(target_os = "android")'.dependencies]
 jni = "0.21"
