Add OpenTelemetry tracing to audio player command flows

--- a/apps/desktop/Cargo.toml
+++ b/apps/desktop/Cargo.toml
@@ -10,6 +10,7 @@ debug-otel = [
   "dep:opentelemetry_sdk",
   "dep:opentelemetry-otlp",
   "dep:opentelemetry-semantic-conventions",
+  "choreo_components/otel",
 ]
 
 [dependencies]
