--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2024"
 publish = false
 
+[features]
+default = []
+otel = [
+  "dep:opentelemetry",
+]
+
 [dependencies]
 choreo_models = { path = "../choreo_models" }
 choreo_master_mobile_json = { path = "../choreo_master_mobile_json" }
@@ -18,6 +24,7 @@ time = "0.3.46"
 web-time = "1.1.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+opentelemetry = { version = "0.31", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 dirs = "6.0.0"
