--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -25,6 +25,7 @@ web-time = "1.1.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 opentelemetry = { version = "0.31", optional = true }
+dark-light = "2.0.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 dirs = "6.0.0"
