audio_player: add selectable awedio backend and split actors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,15 @@ panic = "abort"
 
 [profile.dev]
 panic = "abort"
+
+[profile.dev.package.rodio]
+opt-level = 3
+
+[profile.dev.package.awedio]
+opt-level = 3
+
+[profile.dev.package.cpal]
+opt-level = 3
+
+[profile.dev.package.symphonia]
+opt-level = 3
