--- a/crates/choreo_components/Cargo.toml
+++ b/crates/choreo_components/Cargo.toml
@@ -30,11 +30,12 @@ dark-light = "2.0.0"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 dirs = "6.0.0"
 rodio = "0.17.3"
+awedio = "0.6.0"
 symphonia = { version = "0.5.5", default-features = false, features = ["mp3"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["Performance", "Storage", "Window"] }
+web-sys = { version = "0.3", features = ["HtmlAudioElement", "HtmlMediaElement", "Performance", "Storage", "Window"] }
 web-audio-api = "1.2.0"
 
 [target.'cfg(target_os = "android")'.dependencies]
